add a new audio section also the translation will in there

--- a/assets/html/hadith-input-panel.html
+++ b/assets/html/hadith-input-panel.html
@@ -1,7 +1,7 @@
         <!-- Panel: Input -->
-        <!-- Panel: Input -->
+
         <div class="panel">
-          <h3>Choose</h3>
+          <h3>Choose Hadith</h3>
           <div class="input-row">
             <div class="field field-book">
               <label class="small" for="hadithBook">Book</label>
