--- a/assets/html/quran-input-panel.html
+++ b/assets/html/quran-input-panel.html
@@ -1,6 +1,6 @@
         <!-- Panel: Input -->
         <div class="panel">
-          <h3>Choose</h3>
+          <h3>Choose Ayah</h3>
           <div class="input-row">
             <div class="field field-surah">
               <label class="small" for="surah">Surah</label>
@@ -17,51 +17,9 @@
                 <select id="ayahEnd"></select>
               </div>
             </div>
-            <div class="field field-reciter">
-              <label class="small" for="reciter">Reciter</label>
-              <select id="reciter">
-                <option value="Abdul_Basit_Mujawwad_128kbps">
-                  Abdul Basit — Mujawwad (Arabic)
-                </option>
-                <option value="Alafasy_128kbps">
-                  Mishary Alafasy (Arabic)
-                </option>
-                <option value="Husary_128kbps">
-                  Mahmoud Khalil Al-Husary (Arabic)
-                </option>
-                <option value="Hudhaify_128kbps">
-                  Ali Al-Hudhaify (Arabic)
-                </option>
-                <option value="Minshawi_Mujawwad_128kbps">
-                  Mohamed S. El-Minshawi (Arabic)
-                </option>
-              </select>
-            </div>
 
-            <div class="field field-translation">
-              <label class="small" for="translationEdition"
-                >Translation (text)</label
-              >
-              <select id="translationEdition">
-                <option value="en.daryabadi">English — Abdul Majid Daryabadi</option>
-                <option value="en.asad">English — Muhammad Asad</option>
-                <option value="en.sahih" selected>English — Sahih International</option>
-                <option value="en.pickthall">English — Pickthall</option>
-                <option value="en.yusufali">English — Yusuf Ali</option>
-                <option value="bn.bengali">
-                  Bengali — Bengali Translation
-                </option>
-                <option value="ur.jalandhry">
-                  Urdu — Fateh Muhammad Jalandhry
-                </option>
-                <option value="id.indonesian">
-                  Indonesian — Bahasa Indonesia
-                </option>
-                <option value="fr.hamidullah">
-                  French — Muhammad Hamidullah
-                </option>
-              </select>
-            </div>
+
+
           </div>
         </div>
 
