--- a/quran.html
+++ b/quran.html
@@ -332,6 +332,12 @@
           <!-- Loading... -->
         </div>
 
+        <!-- SECTION: Audio Panel -->
+        <!-- Source: assets/html/quran-audio-panel.html -->
+        <div id="audio-panel-container">
+          <!-- Loading... -->
+        </div>
+
         <!-- SECTION: Background Panel -->
         <!-- Source: assets/html/background-panel.html -->
         <div id="background-panel-container">
@@ -370,6 +376,9 @@
 
         <button class="nav-btn active" data-target="input-panel-container">
           <i class="fas fa-pen"></i>
+        </button>
+        <button class="nav-btn" data-target="audio-panel-container">
+          <i class="fas fa-volume-up"></i>
         </button>
         <button class="nav-btn" data-target="background-panel-container">
           <i class="fas fa-image"></i>
