--- a/hadith.html
+++ b/hadith.html
@@ -324,6 +324,12 @@
           <!-- Loading... -->
         </div>
 
+        <!-- SECTION: Translation Panel -->
+        <!-- Source: assets/html/hadith-translation-panel.html -->
+        <div id="translation-panel-container">
+          <!-- Loading... -->
+        </div>
+
         <!-- SECTION: Background Panel -->
         <!-- Source: assets/html/background-panel.html -->
         <div id="background-panel-container">
@@ -362,6 +368,9 @@
 
         <button class="nav-btn active" data-target="input-panel-container">
           <i class="fas fa-pen"></i>
+        </button>
+        <button class="nav-btn" data-target="translation-panel-container">
+          <i class="fas fa-volume-up"></i>
         </button>
         <button class="nav-btn" data-target="background-panel-container">
           <i class="fas fa-image"></i>
