Audio & Translation mobile logo in AT

--- a/quran.html
+++ b/quran.html
@@ -378,7 +378,7 @@
           <i class="fas fa-pen"></i>
         </button>
         <button class="nav-btn" data-target="audio-panel-container">
-          <i class="fas fa-volume-up"></i>
+          <span style="font-weight: 800; font-family: sans-serif; font-size: 18px;">AT</span>
         </button>
         <button class="nav-btn" data-target="background-panel-container">
           <i class="fas fa-image"></i>
