--- a/hadith.html
+++ b/hadith.html
@@ -370,7 +370,7 @@
           <i class="fas fa-pen"></i>
         </button>
         <button class="nav-btn" data-target="translation-panel-container">
-          <i class="fas fa-volume-up"></i>
+          <span style="font-weight: 800; font-family: sans-serif; font-size: 18px;">AT</span>
         </button>
         <button class="nav-btn" data-target="background-panel-container">
           <i class="fas fa-image"></i>
