audio fadeout text updated

--- a/assets/html/quran-audio-panel.html
+++ b/assets/html/quran-audio-panel.html
@@ -25,7 +25,7 @@
           </div>
 
           <div class="field" style="margin-bottom: 10px;" title="Fade In is automatically set to 50% of Fade Out duration">
-            <label class="small" for="fadeDuration">Fade Out Duration <span id="fadeDurationVal" class="name-chip">(0.5s)</span></label>
+            <label class="small" for="fadeDuration">Audio Fade Out Duration <span id="fadeDurationVal" class="name-chip">(0.5s)</span></label>
             <input id="fadeDuration" type="range" min="0" max="3" step="0.1" value="0.5" style="width: 100%;">
           </div>
         </div>
